Fix map width on safari

--- a/src/Nearby/Nearby.css
+++ b/src/Nearby/Nearby.css
@@ -7,6 +7,7 @@
 .Nearby .map {
   flex: 1;
   height: 100%;
+  width: 100%;
 }
 
 .Nearby .Stop {
